-Allow to convert audio from a real Hilow DataDrive tape to an image file (.ddh)
-Added technical documentation on the extras package

Improved ZX Spectrum Next emulation: added sprite rendering priority bit
Improved ZRCP: allow to change command prompt
Improved generated TZX and PZX files: include date and ZEsarUX version in header
Improved Custom machine menu: added +2E MMC machine


* Fixes:

Fixed handling files larger than 2 GB on 32 bit CPU (it also applies to the Windows version even on a 64 bit CPU)
Fixed using mmc images larger than 2 GB
Fixed redrawing ZX Desktop when resizing main ZEsarUX window
Fixed hang when using View Variables and memory is corrupted
Fixed hang pressing two times F-key assigned to Pause (Mac OS unaffected)
Fixed bug that may crash ZEsarUX when starting machine ZX Spectrum +2 Spanish. This is a bug that has always existed
Fixed losing inserted Z88 cards when changing cpu speed
Fixed Z80 behavior after EI or DD/FD prefixes and interrupts
Fixed Z80 behavior running block opcodes (LDIR, etc) and interrupts
Fixed .Z80 Timex TS2068 snapshot loading
Fixed showing Recent Files when file name contains character %
Fixed HiLow DataDrive emulation: can now load, save, format... all actions are now working
Fixed crash (stack smashing detected) when showing Debug CPU window (and compiled using -fstack-protector)
Fixed segfault when starting ZEsarUX + disabled welcome splash message + enabled reopen windows on start setting + no window to restore
Fixed trap print numbers on Spectrum and ZX81 (setting --chardetectcompatnum)
Fixed segfault when selecting an invalid file type on real tape
Fixed Keyboard Help image for Spectravideo 318
Fixed allowed machines when saving snapshots .ZX
Fixed Breakpoints actions: now are executed everywhere (even in the menu)
Fixed pressing key c (continuous mode) on debug cpu (emulation was unpaused temporarily)
Fixed TZX turbo files extract (including screen previews), convert & file info